src/test/ui/pattern/bindings-after-at/borrowck-pat-ref-mut-twice.stderr
error: cannot borrow value as mutable more than once at a time
  --> $DIR/borrowck-pat-ref-mut-twice.rs:28:9
   |
LL |     let ref mut a @ ref mut b = U;
   |         ---------^^^---------
   |         |           |
   |         |           another mutable borrow, by `b`, occurs here
   |         first mutable borrow, by `a`, occurs here

error: cannot borrow value as mutable more than once at a time
  --> $DIR/borrowck-pat-ref-mut-twice.rs:31:9
   |
LL |     let ref mut a @ ref mut b = U;
   |         ---------^^^---------
   |         |           |
   |         |           another mutable borrow, by `b`, occurs here
   |         first mutable borrow, by `a`, occurs here

error: cannot borrow value as mutable more than once at a time
  --> $DIR/borrowck-pat-ref-mut-twice.rs:35:9
   |
LL |     let ref mut a @ ref mut b = U;
   |         ---------^^^---------
   |         |           |
   |         |           another mutable borrow, by `b`, occurs here
   |         first mutable borrow, by `a`, occurs here

error: cannot borrow value as mutable more than once at a time
  --> $DIR/borrowck-pat-ref-mut-twice.rs:38:9
   |
LL |     let ref mut a @ ref mut b = U;
   |         ---------^^^---------
   |         |           |
   |         |           another mutable borrow, by `b`, occurs here
   |         first mutable borrow, by `a`, occurs here

error: cannot borrow value as mutable more than once at a time
  --> $DIR/borrowck-pat-ref-mut-twice.rs:41:9
   |
LL |     let ref mut a @ ref mut b = U;
   |         ---------^^^---------
   |         |           |
   |         |           another mutable borrow, by `b`, occurs here
   |         first mutable borrow, by `a`, occurs here

error: cannot borrow value as mutable more than once at a time
  --> $DIR/borrowck-pat-ref-mut-twice.rs:46:9
   |
LL |       let ref mut a @ (
   |           ^--------
   |           |
   |  _________first mutable borrow, by `a`, occurs here
   | |
LL | |
LL | |         ref mut b,
   | |         --------- another mutable borrow, by `b`, occurs here
LL | |         [
LL | |             ref mut c,
   | |             --------- another mutable borrow, by `c`, occurs here
LL | |             ref mut d,
   | |             --------- another mutable borrow, by `d`, occurs here
LL | |             ref e,
   | |             ----- also borrowed as immutable, by `e`, here
LL | |         ]
LL | |     ) = (U, [U, U, U]);
   | |_____^

error: cannot borrow value as mutable more than once at a time
  --> $DIR/borrowck-pat-ref-mut-twice.rs:56:9
   |
LL |       let ref mut a @ (
   |           ^--------
   |           |
   |  _________first mutable borrow, by `a`, occurs here
   | |
LL | |
LL | |             ref mut b,
   | |             --------- another mutable borrow, by `b`, occurs here
LL | |             [
LL | |                 ref mut c,
   | |                 --------- another mutable borrow, by `c`, occurs here
LL | |                 ref mut d,
   | |                 --------- another mutable borrow, by `d`, occurs here
LL | |                 ref e,
   | |                 ----- also borrowed as immutable, by `e`, here
LL | |             ]
LL | |         ) = (u(), [u(), u(), u()]);
   | |_________^

error: borrow of moved value
  --> $DIR/borrowck-pat-ref-mut-twice.rs:66:9
   |
LL |     let a @ (ref mut b, ref mut c) = (U, U);
   |         -^^^^---------^^---------^
   |         |    |          |
   |         |    |          value borrowed here after move
   |         |    value borrowed here after move
   |         value moved into `a` here
   |         move occurs because `a` has type `(U, U)` which does not implement the `Copy` trait

error: borrow of moved value
  --> $DIR/borrowck-pat-ref-mut-twice.rs:69:9
   |
LL |     let a @ (b, [c, d]) = &mut val; // Same as ^--
   |         -^^^^-^^^-^^-^^
   |         |    |   |  |
   |         |    |   |  value borrowed here after move
   |         |    |   value borrowed here after move
   |         |    value borrowed here after move
   |         value moved into `a` here
   |         move occurs because `a` has type `&mut (U, [U; 2])` which does not implement the `Copy` trait

error: borrow of moved value
  --> $DIR/borrowck-pat-ref-mut-twice.rs:72:9
   |
LL |     let a @ &mut ref mut b = &mut U;
   |         -^^^^^^^^---------
   |         |        |
   |         |        value borrowed here after move
   |         value moved into `a` here
   |         move occurs because `a` has type `&mut U` which does not implement the `Copy` trait

error: borrow of moved value
  --> $DIR/borrowck-pat-ref-mut-twice.rs:74:9
   |
LL |     let a @ &mut (ref mut b, ref mut c) = &mut (U, U);
   |         -^^^^^^^^^---------^^---------^
   |         |         |          |
   |         |         |          value borrowed here after move
   |         |         value borrowed here after move
   |         value moved into `a` here
   |         move occurs because `a` has type `&mut (U, U)` which does not implement the `Copy` trait

error: cannot borrow value as mutable more than once at a time
  --> $DIR/borrowck-pat-ref-mut-twice.rs:78:9
   |
LL |         ref mut a @ Ok(ref mut b) | ref mut a @ Err(ref mut b) => {
   |         ---------^^^^^^---------^
   |         |              |
   |         |              another mutable borrow, by `b`, occurs here
   |         first mutable borrow, by `a`, occurs here

error: cannot borrow value as mutable more than once at a time
  --> $DIR/borrowck-pat-ref-mut-twice.rs:78:37
   |
LL |         ref mut a @ Ok(ref mut b) | ref mut a @ Err(ref mut b) => {
   |                                     ---------^^^^^^^---------^
   |                                     |               |
   |                                     |               another mutable borrow, by `b`, occurs here
   |                                     first mutable borrow, by `a`, occurs here

error: cannot borrow value as mutable more than once at a time
  --> $DIR/borrowck-pat-ref-mut-twice.rs:84:9
   |
LL |         ref mut a @ Ok(ref mut b) | ref mut a @ Err(ref mut b) => {
   |         ---------^^^^^^---------^
   |         |              |
   |         |              another mutable borrow, by `b`, occurs here
   |         first mutable borrow, by `a`, occurs here

error: cannot borrow value as mutable more than once at a time
  --> $DIR/borrowck-pat-ref-mut-twice.rs:84:37
   |
LL |         ref mut a @ Ok(ref mut b) | ref mut a @ Err(ref mut b) => {
   |                                     ---------^^^^^^^---------^
   |                                     |               |
   |                                     |               another mutable borrow, by `b`, occurs here
   |                                     first mutable borrow, by `a`, occurs here

error: cannot borrow value as mutable more than once at a time
  --> $DIR/borrowck-pat-ref-mut-twice.rs:91:9
   |
LL |         ref mut a @ Ok(ref mut b) | ref mut a @ Err(ref mut b) => {
   |         ---------^^^^^^---------^
   |         |              |
   |         |              another mutable borrow, by `b`, occurs here
   |         first mutable borrow, by `a`, occurs here

error: cannot borrow value as mutable more than once at a time
  --> $DIR/borrowck-pat-ref-mut-twice.rs:91:37
   |
LL |         ref mut a @ Ok(ref mut b) | ref mut a @ Err(ref mut b) => {
   |                                     ---------^^^^^^^---------^
   |                                     |               |
   |                                     |               another mutable borrow, by `b`, occurs here
   |                                     first mutable borrow, by `a`, occurs here

error: cannot borrow value as mutable more than once at a time
  --> $DIR/borrowck-pat-ref-mut-twice.rs:103:9
   |
LL |         ref mut a @ Ok(ref mut b) | ref mut a @ Err(ref mut b) => {
   |         ---------^^^^^^---------^
   |         |              |
   |         |              another mutable borrow, by `b`, occurs here
   |         first mutable borrow, by `a`, occurs here

error: cannot borrow value as mutable more than once at a time
  --> $DIR/borrowck-pat-ref-mut-twice.rs:103:37
   |
LL |         ref mut a @ Ok(ref mut b) | ref mut a @ Err(ref mut b) => {
   |                                     ---------^^^^^^^---------^
   |                                     |               |
   |                                     |               another mutable borrow, by `b`, occurs here
   |                                     first mutable borrow, by `a`, occurs here

error: cannot borrow value as mutable more than once at a time
  --> $DIR/borrowck-pat-ref-mut-twice.rs:10:11
   |
LL |     fn f1(ref mut a @ ref mut b: U) {}
   |           ---------^^^---------
   |           |           |
   |           |           another mutable borrow, by `b`, occurs here
   |           first mutable borrow, by `a`, occurs here

error: cannot borrow value as mutable more than once at a time
  --> $DIR/borrowck-pat-ref-mut-twice.rs:12:11
   |
LL |     fn f2(ref mut a @ ref mut b: U) {}
   |           ---------^^^---------
   |           |           |
   |           |           another mutable borrow, by `b`, occurs here
   |           first mutable borrow, by `a`, occurs here

error: cannot borrow value as mutable more than once at a time
  --> $DIR/borrowck-pat-ref-mut-twice.rs:15:9
   |
LL |           ref mut a @ [
   |           ^--------
   |           |
   |  _________first mutable borrow, by `a`, occurs here
   | |
LL | |
LL | |             [ref b @ .., _],
   | |              ---------- also borrowed as immutable, by `b`, here
LL | |             [_, ref mut mid @ ..],
   | |                 ---------------- another mutable borrow, by `mid`, occurs here
LL | |             ..,
LL | |             [..],
LL | |         ] : [[U; 4]; 5]
   | |_________^

error: cannot borrow value as mutable more than once at a time
  --> $DIR/borrowck-pat-ref-mut-twice.rs:23:22
   |
LL |     fn f4_also_moved(ref mut a @ ref mut b @ c: U) {}
   |                      ---------^^^-------------
   |                      |           |           |
   |                      |           |           also moved into `c` here
   |                      |           another mutable borrow, by `b`, occurs here
   |                      first mutable borrow, by `a`, occurs here

error: cannot move out of value because it is borrowed
  --> $DIR/borrowck-pat-ref-mut-twice.rs:23:34
   |
LL |     fn f4_also_moved(ref mut a @ ref mut b @ c: U) {}
   |                                  ---------^^^-
   |                                  |           |
   |                                  |           value moved into `c` here
   |                                  value borrowed, by `b`, here

error[E0499]: cannot borrow value as mutable more than once at a time
  --> $DIR/borrowck-pat-ref-mut-twice.rs:31:9
   |
LL |     let ref mut a @ ref mut b = U;
   |         ^^^^^^^^^^^^---------
   |         |           |
   |         |           first mutable borrow occurs here
   |         second mutable borrow occurs here
...
LL |     drop(b);
   |          - first borrow later used here

error[E0499]: cannot borrow value as mutable more than once at a time
  --> $DIR/borrowck-pat-ref-mut-twice.rs:41:9
   |
LL |     let ref mut a @ ref mut b = U;
   |         ^^^^^^^^^^^^---------
   |         |           |
   |         |           first mutable borrow occurs here
   |         second mutable borrow occurs here
...
LL |     *b = U;
   |     ------ first borrow later used here

error[E0499]: cannot borrow value as mutable more than once at a time
  --> $DIR/borrowck-pat-ref-mut-twice.rs:91:24
   |
LL |         ref mut a @ Ok(ref mut b) | ref mut a @ Err(ref mut b) => {
   |         ---------------^^^^^^^^^-
   |         |              |
   |         |              second mutable borrow occurs here
   |         first mutable borrow occurs here
...
LL |             *a = Err(U);
   |             ----------- first borrow later used here

error[E0499]: cannot borrow value as mutable more than once at a time
  --> $DIR/borrowck-pat-ref-mut-twice.rs:91:53
   |
LL |         ref mut a @ Ok(ref mut b) | ref mut a @ Err(ref mut b) => {
   |                                     ----------------^^^^^^^^^-
   |                                     |               |
   |                                     |               second mutable borrow occurs here
   |                                     first mutable borrow occurs here
...
LL |             *a = Err(U);
   |             ----------- first borrow later used here

error[E0499]: cannot borrow value as mutable more than once at a time
  --> $DIR/borrowck-pat-ref-mut-twice.rs:103:24
   |
LL |         ref mut a @ Ok(ref mut b) | ref mut a @ Err(ref mut b) => {
   |         ---------------^^^^^^^^^-
   |         |              |
   |         |              second mutable borrow occurs here
   |         first mutable borrow occurs here
...
LL |             drop(a);
   |                  - first borrow later used here

error[E0499]: cannot borrow value as mutable more than once at a time
  --> $DIR/borrowck-pat-ref-mut-twice.rs:103:53
   |
LL |         ref mut a @ Ok(ref mut b) | ref mut a @ Err(ref mut b) => {
   |                                     ----------------^^^^^^^^^-
   |                                     |               |
   |                                     |               second mutable borrow occurs here
   |                                     first mutable borrow occurs here
...
LL |             drop(a);
   |                  - first borrow later used here

error[E0382]: borrow of moved value
  --> $DIR/borrowck-pat-ref-mut-twice.rs:23:34
   |
LL |     fn f4_also_moved(ref mut a @ ref mut b @ c: U) {}
   |                      ------------^^^^^^^^^^^^-
   |                      |           |           |
   |                      |           |           value moved here
   |                      |           value borrowed here after move
   |                      move occurs because value has type `U`, which does not implement the `Copy` trait

error: aborting due to 31 previous errors

Some errors have detailed explanations: E0382, E0499.
For more information about an error, try `rustc --explain E0382`.
